commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45695,6 +45695,10 @@
     {
       "Date": "2022-11-23 17:00",
       "Rate": "19.3556"
+    },
+    {
+      "Date": "2022-11-23 18:00",
+      "Rate": "19.3505"
     }
   ]
 }
