commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45699,6 +45699,10 @@
     {
       "Date": "2022-11-23 18:00",
       "Rate": "19.3505"
+    },
+    {
+      "Date": "2022-11-23 19:00",
+      "Rate": "19.3534"
     }
   ]
 }
