--- a/indexRt.html
+++ b/indexRt.html
@@ -45703,6 +45703,10 @@
     {
       "Date": "2022-11-23 19:00",
       "Rate": "19.3534"
+    },
+    {
+      "Date": "2022-11-23 20:00",
+      "Rate": "19.3526"
     }
   ]
 }
