--- a/indexRt.html
+++ b/indexRt.html
@@ -45707,6 +45707,10 @@
     {
       "Date": "2022-11-23 20:00",
       "Rate": "19.3526"
+    },
+    {
+      "Date": "2022-11-23 21:00",
+      "Rate": "19.3527"
     }
   ]
 }
