commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45711,6 +45711,10 @@
     {
       "Date": "2022-11-23 21:00",
       "Rate": "19.3527"
+    },
+    {
+      "Date": "2022-11-24 07:00",
+      "Rate": "19.3575"
     }
   ]
 }
