--- a/indexRt.html
+++ b/indexRt.html
@@ -45715,6 +45715,10 @@
     {
       "Date": "2022-11-24 07:00",
       "Rate": "19.3575"
+    },
+    {
+      "Date": "2022-11-24 07:02",
+      "Rate": "19.3575"
     }
   ]
 }
