--- a/indexDllIos.html
+++ b/indexDllIos.html
@@ -33,11 +33,11 @@
 },{
   "bank_id": 5,
   "bank_name": "SCOTIABANK",
-  "sell": 19.6969685,
-  "buy": 18.969664,
-  "date": "2022-11-24 11:20:10",
-  "prev_buy": 19.68424975,
-  "prev_sell": 18.956728
+  "sell": 19.69645975,
+  "buy": 18.968978,
+  "date": "2022-11-24 11:30:11",
+  "prev_buy": 19.70765225,
+  "prev_sell": 18.978582
 },{
   "bank_id": 6,
   "bank_name": "BANXICO",
@@ -52,16 +52,16 @@
   "sell": 19.6,
   "buy": 18.2,
   "date": "2022-11-23 15:10:12",
-  "prev_buy": 19.6,
-  "prev_sell": 18.2
+  "prev_buy": 20.85,
+  "prev_sell": 19.45
 },{
   "bank_id": 8,
   "bank_name": "BANSI",
-  "sell": 19.60119,
-  "buy": 19.0667435,
-  "date": "2022-11-24 11:20:13",
-  "prev_buy": 19.608075,
-  "prev_sell": 19.06369
+  "sell": 19.59967125,
+  "buy": 19.0657585,
+  "date": "2022-11-24 11:30:13",
+  "prev_buy": 19.60898625,
+  "prev_sell": 19.0736385
 },{
   "bank_id": 9,
   "bank_name": "BAJIO",
@@ -89,9 +89,9 @@
 },{
   "bank_id": 12,
   "bank_name": "FAMSA",
-  "sell": 19.746384,
-  "buy": 18.969958,
-  "date": "2022-11-24 11:20:15",
+  "sell": 19.744854,
+  "buy": 18.968978,
+  "date": "2022-11-24 11:30:15",
   "prev_buy": 19.75332,
   "prev_sell": 18.96692
 },{
@@ -105,19 +105,19 @@
 },{
   "bank_id": 14,
   "bank_name": "MONEX",
-  "sell": 20.33,
-  "buy": 19.81,
-  "date": "2022-11-24 11:00:17",
+  "sell": 20.22,
+  "buy": 19.69,
+  "date": "2022-11-24 11:30:26",
   "prev_buy": 20.92,
   "prev_sell": 20.39
 },{
   "bank_id": 15,
   "bank_name": "BANJERCITO",
-  "sell": 19.8633,
-  "buy": 18.8528,
-  "date": "2022-11-24 11:20:16",
-  "prev_buy": 19.8703,
-  "prev_sell": 18.8598
+  "sell": 19.8611,
+  "buy": 18.8506,
+  "date": "2022-11-24 11:30:26",
+  "prev_buy": 19.8729,
+  "prev_sell": 18.8624
 },{
   "bank_id": 16,
   "bank_name": "BANREGIO",
@@ -161,99 +161,99 @@
 },{
   "bank_id": 21,
   "bank_name": "CIBANCO",
-  "sell": 19.6689472,
-  "buy": 18.86349395,
-  "date": "2022-11-24 11:20:27",
-  "prev_buy": 19.675856,
-  "prev_sell": 18.860473
+  "sell": 19.6674232,
+  "buy": 18.86251945,
+  "date": "2022-11-24 11:30:45",
+  "prev_buy": 19.6785992,
+  "prev_sell": 18.87206955
 },{
   "bank_id": 22,
   "bank_name": "COMPARTAMOS",
-  "sell": 19.7076656,
-  "buy": 18.90220815,
-  "date": "2022-11-24 11:20:27",
+  "sell": 19.7061386,
+  "buy": 18.90123165,
+  "date": "2022-11-24 11:30:46",
   "prev_buy": 19.6939226,
   "prev_sell": 18.8890254
 },{
   "bank_id": 23,
   "bank_name": "BANCOPPEL",
-  "sell": 19.7173452,
-  "buy": 18.72799425,
-  "date": "2022-11-24 11:20:28",
+  "sell": 19.71581745,
+  "buy": 18.72702675,
+  "date": "2022-11-24 11:30:46",
   "prev_buy": 19.70359545,
   "prev_sell": 18.714933
 },{
   "bank_id": 24,
   "bank_name": "BANCREA",
-  "sell": 19.67669088,
-  "buy": 18.92350096,
-  "date": "2022-11-24 11:20:29",
+  "sell": 19.67516628,
+  "buy": 18.92252336,
+  "date": "2022-11-24 11:30:47",
   "prev_buy": 19.6836024,
   "prev_sell": 18.9204704
 },{
   "bank_id": 25,
   "bank_name": "BANKAOOL",
-  "sell": 19.5915104,
-  "buy": 18.7376728,
-  "date": "2022-11-24 11:20:29",
-  "prev_buy": 19.598392,
-  "prev_sell": 18.734672
+  "sell": 19.5899924,
+  "buy": 18.7367048,
+  "date": "2022-11-24 11:30:47",
+  "prev_buy": 19.6011244,
+  "prev_sell": 18.7461912
 },{
   "bank_id": 26,
   "bank_name": "BANSEFI",
-  "sell": 19.7657432,
-  "buy": 18.5247447,
-  "date": "2022-11-24 11:20:30",
-  "prev_buy": 19.772686,
-  "prev_sell": 18.521778
+  "sell": 19.7642117,
+  "buy": 18.5237877,
+  "date": "2022-11-24 11:30:48",
+  "prev_buy": 19.7754427,
+  "prev_sell": 18.5331663
 },{
   "bank_id": 27,
   "bank_name": "BANCOFITERRA",
-  "sell": 19.7270248,
-  "buy": 18.9506009,
-  "date": "2022-11-24 11:20:30",
-  "prev_buy": 19.733954,
-  "prev_sell": 18.947566
+  "sell": 19.7254963,
+  "buy": 18.9496219,
+  "date": "2022-11-24 11:30:48",
+  "prev_buy": 19.7367053,
+  "prev_sell": 18.9592161
 },{
   "bank_id": 28,
   "bank_name": "BANCAMIFEL",
-  "sell": 19.84318,
-  "buy": 18.582816,
-  "date": "2022-11-24 11:20:31",
+  "sell": 19.8416425,
+  "buy": 18.581856,
+  "date": "2022-11-24 11:30:48",
   "prev_buy": 19.85015,
   "prev_sell": 18.57984
 },{
   "bank_id": 29,
   "bank_name": "AMERICAN EXPRESS",
-  "sell": 19.81317324,
-  "buy": 18.90220815,
-  "date": "2022-11-24 11:20:31",
+  "sell": 19.81163807,
+  "buy": 18.90123165,
+  "date": "2022-11-24 11:30:49",
   "prev_buy": 19.8201327,
   "prev_sell": 18.899181
 },{
   "bank_id": 30,
   "bank_name": "VISA",
-  "sell": 19.794782,
-  "buy": 18.92156525,
-  "date": "2022-11-24 11:20:32",
+  "sell": 19.79324825,
+  "buy": 18.92058775,
+  "date": "2022-11-24 11:30:49",
   "prev_buy": 19.801735,
   "prev_sell": 18.918535
 },{
   "bank_id": 31,
   "bank_name": "MASTERCARD",
-  "sell": 19.794782,
-  "buy": 18.9118867,
-  "date": "2022-11-24 11:20:32",
-  "prev_buy": 19.801735,
-  "prev_sell": 18.908858
+  "sell": 19.79324825,
+  "buy": 18.9109097,
+  "date": "2022-11-24 11:30:49",
+  "prev_buy": 19.80449575,
+  "prev_sell": 18.9204843
 },{
   "bank_id": 32,
   "bank_name": "BANORTE",
   "sell": 19.6,
   "buy": 18.2,
   "date": "2022-11-23 15:00:29",
-  "prev_buy": 19.6,
-  "prev_sell": 18.2
+  "prev_buy": 20.85,
+  "prev_sell": 19.45
 },{
   "bank_id": 33,
   "bank_name": "",
