--- a/indexRt.html
+++ b/indexRt.html
@@ -45719,6 +45719,10 @@
     {
       "Date": "2022-11-24 07:02",
       "Rate": "19.3575"
+    },
+    {
+      "Date": "2022-11-24 08:00",
+      "Rate": "19.3633"
     }
   ]
 }
