commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45723,6 +45723,10 @@
     {
       "Date": "2022-11-24 08:00",
       "Rate": "19.3633"
+    },
+    {
+      "Date": "2022-11-24 08:02",
+      "Rate": "19.3633"
     }
   ]
 }
