--- a/indexRt.html
+++ b/indexRt.html
@@ -45727,6 +45727,10 @@
     {
       "Date": "2022-11-24 08:02",
       "Rate": "19.3633"
+    },
+    {
+      "Date": "2022-11-24 09:00",
+      "Rate": "19.3718"
     }
   ]
 }
