commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45731,6 +45731,10 @@
     {
       "Date": "2022-11-24 09:00",
       "Rate": "19.3718"
+    },
+    {
+      "Date": "2022-11-24 09:02",
+      "Rate": "19.3718"
     }
   ]
 }
