--- a/indexDllIos.html
+++ b/indexDllIos.html
@@ -33,9 +33,9 @@
 },{
   "bank_id": 5,
   "bank_name": "SCOTIABANK",
-  "sell": 19.700835,
-  "buy": 18.972016,
-  "date": "2022-11-24 13:00:10",
+  "sell": 19.70154725,
+  "buy": 18.972604,
+  "date": "2022-11-24 13:10:11",
   "prev_buy": 19.72026925,
   "prev_sell": 18.99044
 },{
@@ -52,14 +52,14 @@
   "sell": 19.6,
   "buy": 18.2,
   "date": "2022-11-23 15:10:12",
-  "prev_buy": 20.85,
-  "prev_sell": 19.45
+  "prev_buy": 19.6,
+  "prev_sell": 18.2
 },{
   "bank_id": 8,
   "bank_name": "BANSI",
-  "sell": 19.60432875,
-  "buy": 19.0696,
-  "date": "2022-11-24 13:00:12",
+  "sell": 19.60473375,
+  "buy": 19.069403,
+  "date": "2022-11-24 13:10:14",
   "prev_buy": 19.62954,
   "prev_sell": 19.0937325
 },{
@@ -89,11 +89,11 @@
 },{
   "bank_id": 12,
   "bank_name": "FAMSA",
-  "sell": 19.749546,
-  "buy": 18.9728,
-  "date": "2022-11-24 13:00:14",
-  "prev_buy": 19.753932,
-  "prev_sell": 18.97672
+  "sell": 19.749954,
+  "buy": 18.972604,
+  "date": "2022-11-24 13:10:16",
+  "prev_buy": 19.76454,
+  "prev_sell": 18.9875
 },{
   "bank_id": 13,
   "bank_name": "BANCOAZTECA",
@@ -105,19 +105,19 @@
 },{
   "bank_id": 14,
   "bank_name": "MONEX",
-  "sell": 20.33,
-  "buy": 19.81,
-  "date": "2022-11-24 13:00:15",
-  "prev_buy": 20.92,
-  "prev_sell": 20.39
+  "sell": 20.22,
+  "buy": 19.69,
+  "date": "2022-11-24 13:10:17",
+  "prev_buy": 20.33,
+  "prev_sell": 19.81
 },{
   "bank_id": 15,
   "bank_name": "BANJERCITO",
-  "sell": 19.8662,
-  "buy": 18.8557,
-  "date": "2022-11-24 13:00:16",
-  "prev_buy": 19.886,
-  "prev_sell": 18.879
+  "sell": 19.8766,
+  "buy": 18.8661,
+  "date": "2022-11-24 13:10:18",
+  "prev_buy": 19.8805,
+  "prev_sell": 18.87
 },{
   "bank_id": 16,
   "bank_name": "BANREGIO",
@@ -161,89 +161,89 @@
 },{
   "bank_id": 21,
   "bank_name": "CIBANCO",
-  "sell": 19.6720968,
-  "buy": 18.86632,
-  "date": "2022-11-24 13:00:20",
-  "prev_buy": 19.6954648,
-  "prev_sell": 18.8889284
+  "sell": 19.6725032,
+  "buy": 18.8661251,
+  "date": "2022-11-24 13:10:23",
+  "prev_buy": 19.687032,
+  "prev_sell": 18.8809375
 },{
   "bank_id": 22,
   "bank_name": "COMPARTAMOS",
-  "sell": 19.7108214,
-  "buy": 18.90504,
-  "date": "2022-11-24 13:00:20",
-  "prev_buy": 19.7312832,
-  "prev_sell": 18.92466765
+  "sell": 19.7112286,
+  "buy": 18.9048447,
+  "date": "2022-11-24 13:10:23",
+  "prev_buy": 19.725786,
+  "prev_sell": 18.9196875
 },{
   "bank_id": 23,
   "bank_name": "BANCOPPEL",
-  "sell": 19.72050255,
-  "buy": 18.7308,
-  "date": "2022-11-24 13:00:21",
+  "sell": 19.72090995,
+  "buy": 18.7306065,
+  "date": "2022-11-24 13:10:24",
   "prev_buy": 19.7409744,
   "prev_sell": 18.75024675
 },{
   "bank_id": 24,
   "bank_name": "BANCREA",
-  "sell": 19.67984172,
-  "buy": 18.926336,
-  "date": "2022-11-24 13:00:22",
-  "prev_buy": 19.68421224,
-  "prev_sell": 18.9302464
+  "sell": 19.68024828,
+  "buy": 18.92614048,
+  "date": "2022-11-24 13:10:24",
+  "prev_buy": 19.6947828,
+  "prev_sell": 18.941
 },{
   "bank_id": 25,
   "bank_name": "BANKAOOL",
-  "sell": 19.5946476,
-  "buy": 18.74048,
-  "date": "2022-11-24 13:00:22",
-  "prev_buy": 19.6179236,
-  "prev_sell": 18.7629376
+  "sell": 19.5950524,
+  "buy": 18.7402864,
+  "date": "2022-11-24 13:10:25",
+  "prev_buy": 19.609524,
+  "prev_sell": 18.755
 },{
   "bank_id": 26,
   "bank_name": "BANSEFI",
-  "sell": 19.7689083,
-  "buy": 18.52752,
-  "date": "2022-11-24 13:00:22",
+  "sell": 19.7693167,
+  "buy": 18.5273286,
+  "date": "2022-11-24 13:10:25",
   "prev_buy": 19.7923913,
   "prev_sell": 18.5497224
 },{
   "bank_id": 27,
   "bank_name": "BANCOFITERRA",
-  "sell": 19.7301837,
-  "buy": 18.95344,
-  "date": "2022-11-24 13:00:23",
+  "sell": 19.7305913,
+  "buy": 18.9532442,
+  "date": "2022-11-24 13:10:26",
   "prev_buy": 19.7506656,
   "prev_sell": 18.9731179
 },{
   "bank_id": 28,
   "bank_name": "BANCAMIFEL",
-  "sell": 19.8463575,
-  "buy": 18.5856,
-  "date": "2022-11-24 13:00:23",
+  "sell": 19.8467675,
+  "buy": 18.585408,
+  "date": "2022-11-24 13:10:26",
   "prev_buy": 19.8699325,
   "prev_sell": 18.607872
 },{
   "bank_id": 29,
   "bank_name": "AMERICAN EXPRESS",
-  "sell": 19.81634594,
-  "buy": 18.90504,
-  "date": "2022-11-24 13:00:24",
+  "sell": 19.81675532,
+  "buy": 18.9048447,
+  "date": "2022-11-24 13:10:27",
   "prev_buy": 19.83988529,
   "prev_sell": 18.9276948
 },{
   "bank_id": 30,
   "bank_name": "VISA",
-  "sell": 19.79795175,
-  "buy": 18.9244,
-  "date": "2022-11-24 13:00:25",
+  "sell": 19.79836075,
+  "buy": 18.9242045,
+  "date": "2022-11-24 13:10:27",
   "prev_buy": 19.82146925,
   "prev_sell": 18.947078
 },{
   "bank_id": 31,
   "bank_name": "MASTERCARD",
-  "sell": 19.79795175,
-  "buy": 18.91472,
-  "date": "2022-11-24 13:00:25",
+  "sell": 19.79836075,
+  "buy": 18.9145246,
+  "date": "2022-11-24 13:10:28",
   "prev_buy": 19.82146925,
   "prev_sell": 18.9373864
 },{
