commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45735,6 +45735,10 @@
     {
       "Date": "2022-11-24 09:02",
       "Rate": "19.3718"
+    },
+    {
+      "Date": "2022-11-24 10:00",
+      "Rate": "19.3860"
     }
   ]
 }
