commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45739,6 +45739,10 @@
     {
       "Date": "2022-11-24 10:00",
       "Rate": "19.3860"
+    },
+    {
+      "Date": "2022-11-24 10:02",
+      "Rate": "19.3860"
     }
   ]
 }
