commit from netcore service

--- a/indexDllIos.html
+++ b/indexDllIos.html
@@ -33,11 +33,11 @@
 },{
   "bank_id": 5,
   "bank_name": "SCOTIABANK",
-  "sell": 19.728104,
-  "buy": 18.9973,
-  "date": "2022-11-24 14:20:11",
-  "prev_buy": 19.701242,
-  "prev_sell": 18.973192
+  "sell": 19.73451425,
+  "buy": 19.004062,
+  "date": "2022-11-24 14:30:10",
+  "prev_buy": 19.713045,
+  "prev_sell": 18.983874
 },{
   "bank_id": 6,
   "bank_name": "BANXICO",
@@ -57,9 +57,9 @@
 },{
   "bank_id": 8,
   "bank_name": "BANSI",
-  "sell": 19.63116,
-  "buy": 19.094225,
-  "date": "2022-11-24 14:20:13",
+  "sell": 19.63753875,
+  "buy": 19.1010215,
+  "date": "2022-11-24 14:30:12",
   "prev_buy": 19.61060625,
   "prev_sell": 19.075707
 },{
@@ -89,11 +89,11 @@
 },{
   "bank_id": 12,
   "bank_name": "FAMSA",
-  "sell": 19.776576,
-  "buy": 18.9973,
-  "date": "2022-11-24 14:20:15",
-  "prev_buy": 19.75587,
-  "prev_sell": 18.978876
+  "sell": 19.783002,
+  "buy": 19.004062,
+  "date": "2022-11-24 14:30:15",
+  "prev_buy": 19.761582,
+  "prev_sell": 18.983874
 },{
   "bank_id": 13,
   "bank_name": "BANCOAZTECA",
@@ -108,16 +108,16 @@
   "sell": 20.33,
   "buy": 19.81,
   "date": "2022-11-24 14:00:17",
-  "prev_buy": 20.92,
-  "prev_sell": 20.39
+  "prev_buy": 20.22,
+  "prev_sell": 19.69
 },{
   "bank_id": 15,
   "bank_name": "BANJERCITO",
-  "sell": 19.893,
-  "buy": 18.8825,
-  "date": "2022-11-24 14:20:17",
-  "prev_buy": 19.878,
-  "prev_sell": 18.8675
+  "sell": 19.8977,
+  "buy": 18.8872,
+  "date": "2022-11-24 14:30:16",
+  "prev_buy": 19.8737,
+  "prev_sell": 18.8632
 },{
   "bank_id": 16,
   "bank_name": "BANREGIO",
@@ -161,89 +161,89 @@
 },{
   "bank_id": 21,
   "bank_name": "CIBANCO",
-  "sell": 19.6990208,
-  "buy": 18.8906825,
-  "date": "2022-11-24 14:20:23",
+  "sell": 19.7054216,
+  "buy": 18.89740655,
+  "date": "2022-11-24 14:30:21",
   "prev_buy": 19.678396,
   "prev_sell": 18.8723619
 },{
   "bank_id": 22,
   "bank_name": "COMPARTAMOS",
-  "sell": 19.7377984,
-  "buy": 18.9294525,
-  "date": "2022-11-24 14:20:24",
-  "prev_buy": 19.717133,
-  "prev_sell": 18.9110943
+  "sell": 19.7442118,
+  "buy": 18.93619035,
+  "date": "2022-11-24 14:30:21",
+  "prev_buy": 19.7228338,
+  "prev_sell": 18.91607445
 },{
   "bank_id": 23,
   "bank_name": "BANCOPPEL",
-  "sell": 19.7474928,
-  "buy": 18.7549875,
-  "date": "2022-11-24 14:20:24",
+  "sell": 19.75390935,
+  "buy": 18.76166325,
+  "date": "2022-11-24 14:30:22",
   "prev_buy": 19.7318079,
   "prev_sell": 18.7410555
 },{
   "bank_id": 24,
   "bank_name": "BANCREA",
-  "sell": 19.70677632,
-  "buy": 18.950776,
-  "date": "2022-11-24 14:20:25",
+  "sell": 19.71317964,
+  "buy": 18.95752144,
+  "date": "2022-11-24 14:30:22",
   "prev_buy": 19.6861434,
   "prev_sell": 18.93239712
 },{
   "bank_id": 25,
   "bank_name": "BANKAOOL",
-  "sell": 19.6214656,
-  "buy": 18.76468,
-  "date": "2022-11-24 14:20:25",
+  "sell": 19.6278412,
+  "buy": 18.7713592,
+  "date": "2022-11-24 14:30:23",
   "prev_buy": 19.600922,
   "prev_sell": 18.7464816
 },{
   "bank_id": 26,
   "bank_name": "BANSEFI",
-  "sell": 19.7959648,
-  "buy": 18.551445,
-  "date": "2022-11-24 14:20:26",
+  "sell": 19.8023971,
+  "buy": 18.5580483,
+  "date": "2022-11-24 14:30:24",
   "prev_buy": 19.7802414,
   "prev_sell": 18.5376642
 },{
   "bank_id": 27,
   "bank_name": "BANCOFITERRA",
-  "sell": 19.7571872,
-  "buy": 18.977915,
-  "date": "2022-11-24 14:20:27",
+  "sell": 19.7636069,
+  "buy": 18.9846701,
+  "date": "2022-11-24 14:30:24",
   "prev_buy": 19.7365015,
   "prev_sell": 18.9595098
 },{
   "bank_id": 28,
   "bank_name": "BANCAMIFEL",
-  "sell": 19.87352,
-  "buy": 18.6096,
-  "date": "2022-11-24 14:20:27",
+  "sell": 19.8799775,
+  "buy": 18.616224,
+  "date": "2022-11-24 14:30:24",
   "prev_buy": 19.8527125,
   "prev_sell": 18.591552
 },{
   "bank_id": 29,
   "bank_name": "AMERICAN EXPRESS",
-  "sell": 19.84346736,
-  "buy": 18.9294525,
-  "date": "2022-11-24 14:20:28",
+  "sell": 19.8499151,
+  "buy": 18.93619035,
+  "date": "2022-11-24 14:30:25",
   "prev_buy": 19.82269133,
   "prev_sell": 18.9110943
 },{
   "bank_id": 30,
   "bank_name": "VISA",
-  "sell": 19.825048,
-  "buy": 18.9488375,
-  "date": "2022-11-24 14:20:28",
+  "sell": 19.83148975,
+  "buy": 18.95558225,
+  "date": "2022-11-24 14:30:25",
   "prev_buy": 19.80429125,
   "prev_sell": 18.9304605
 },{
   "bank_id": 31,
   "bank_name": "MASTERCARD",
-  "sell": 19.825048,
-  "buy": 18.939145,
-  "date": "2022-11-24 14:20:29",
+  "sell": 19.83148975,
+  "buy": 18.9458863,
+  "date": "2022-11-24 14:30:26",
   "prev_buy": 19.80429125,
   "prev_sell": 18.9207774
 },{
