--- a/indexRt.html
+++ b/indexRt.html
@@ -45743,6 +45743,10 @@
     {
       "Date": "2022-11-24 10:02",
       "Rate": "19.3860"
+    },
+    {
+      "Date": "2022-11-24 11:00",
+      "Rate": "19.3859"
     }
   ]
 }
