commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45747,6 +45747,10 @@
     {
       "Date": "2022-11-24 11:00",
       "Rate": "19.3859"
+    },
+    {
+      "Date": "2022-11-24 11:02",
+      "Rate": "19.3859"
     }
   ]
 }
