commit from netcore service

--- a/indexDllIos.html
+++ b/indexDllIos.html
@@ -33,11 +33,11 @@
 },{
   "bank_id": 5,
   "bank_name": "SCOTIABANK",
-  "sell": 19.7323775,
+  "sell": 19.72433925,
   "buy": 18.9924,
-  "date": "2022-11-24 15:20:10",
-  "prev_buy": 19.71314675,
-  "prev_sell": 18.984658
+  "date": "2022-11-24 15:30:11",
+  "prev_buy": 19.704905,
+  "prev_sell": 18.9679
 },{
   "bank_id": 6,
   "bank_name": "BANXICO",
@@ -57,11 +57,11 @@
 },{
   "bank_id": 8,
   "bank_name": "BANSI",
-  "sell": 19.6354125,
+  "sell": 19.62741375,
   "buy": 19.0893,
-  "date": "2022-11-24 15:20:12",
-  "prev_buy": 19.61627625,
-  "prev_sell": 19.0815185
+  "date": "2022-11-24 15:30:13",
+  "prev_buy": 19.6090875,
+  "prev_sell": 19.06566
 },{
   "bank_id": 9,
   "bank_name": "BAJIO",
@@ -89,11 +89,11 @@
 },{
   "bank_id": 12,
   "bank_name": "FAMSA",
-  "sell": 19.78086,
-  "buy": 18.9924,
-  "date": "2022-11-24 15:20:14",
-  "prev_buy": 19.761582,
-  "prev_sell": 18.984658
+  "sell": 19.770354,
+  "buy": 18.989852,
+  "date": "2022-11-24 15:30:16",
+  "prev_buy": 19.75434,
+  "prev_sell": 18.96888
 },{
   "bank_id": 13,
   "bank_name": "BANCOAZTECA",
@@ -113,11 +113,11 @@
 },{
   "bank_id": 15,
   "bank_name": "BANJERCITO",
-  "sell": 19.8875,
-  "buy": 18.877,
-  "date": "2022-11-24 15:20:15",
-  "prev_buy": 19.8644,
-  "prev_sell": 18.8539
+  "sell": 19.8836,
+  "buy": 18.8731,
+  "date": "2022-11-24 15:30:27",
+  "prev_buy": 19.8656,
+  "prev_sell": 18.8551
 },{
   "bank_id": 16,
   "bank_name": "BANREGIO",
@@ -161,91 +161,91 @@
 },{
   "bank_id": 21,
   "bank_name": "CIBANCO",
-  "sell": 19.703288,
-  "buy": 18.88581,
-  "date": "2022-11-24 15:20:20",
-  "prev_buy": 19.6840856,
-  "prev_sell": 18.87811145
+  "sell": 19.6928232,
+  "buy": 18.8832763,
+  "date": "2022-11-24 15:30:41",
+  "prev_buy": 19.676872,
+  "prev_sell": 18.862422
 },{
   "bank_id": 22,
   "bank_name": "COMPARTAMOS",
-  "sell": 19.742074,
-  "buy": 18.92457,
-  "date": "2022-11-24 15:20:21",
-  "prev_buy": 19.7228338,
-  "prev_sell": 18.91685565
+  "sell": 19.7315886,
+  "buy": 18.9220311,
+  "date": "2022-11-24 15:30:42",
+  "prev_buy": 19.715606,
+  "prev_sell": 18.901134
 },{
   "bank_id": 23,
   "bank_name": "BANCOPPEL",
-  "sell": 19.7517705,
-  "buy": 18.75015,
-  "date": "2022-11-24 15:20:21",
-  "prev_buy": 19.73252085,
-  "prev_sell": 18.74250675
+  "sell": 19.74127995,
+  "buy": 18.7476345,
+  "date": "2022-11-24 15:30:43",
+  "prev_buy": 19.7252895,
+  "prev_sell": 18.72693
 },{
   "bank_id": 24,
   "bank_name": "BANCREA",
-  "sell": 19.7110452,
-  "buy": 18.945888,
-  "date": "2022-11-24 15:20:22",
-  "prev_buy": 19.69183524,
-  "prev_sell": 18.93816496
+  "sell": 19.70057628,
+  "buy": 18.94334624,
+  "date": "2022-11-24 15:30:43",
+  "prev_buy": 19.6846188,
+  "prev_sell": 18.9224256
 },{
   "bank_id": 25,
   "bank_name": "BANKAOOL",
-  "sell": 19.625716,
-  "buy": 18.75984,
-  "date": "2022-11-24 15:20:23",
-  "prev_buy": 19.6065892,
-  "prev_sell": 18.7521928
+  "sell": 19.6152924,
+  "buy": 18.7573232,
+  "date": "2022-11-24 15:30:43",
+  "prev_buy": 19.599404,
+  "prev_sell": 18.736608
 },{
   "bank_id": 26,
   "bank_name": "BANSEFI",
-  "sell": 19.800253,
-  "buy": 18.54666,
-  "date": "2022-11-24 15:20:23",
-  "prev_buy": 19.7809561,
-  "prev_sell": 18.5390997
+  "sell": 19.7897367,
+  "buy": 18.5441718,
+  "date": "2022-11-24 15:30:44",
+  "prev_buy": 19.773707,
+  "prev_sell": 18.523692
 },{
   "bank_id": 27,
   "bank_name": "BANCOFITERRA",
-  "sell": 19.761467,
-  "buy": 18.97302,
-  "date": "2022-11-24 15:20:24",
-  "prev_buy": 19.7422079,
-  "prev_sell": 18.9652859
+  "sell": 19.7509713,
+  "buy": 18.9704746,
+  "date": "2022-11-24 15:30:45",
+  "prev_buy": 19.734973,
+  "prev_sell": 18.949524
 },{
   "bank_id": 28,
   "bank_name": "BANCAMIFEL",
-  "sell": 19.877825,
-  "buy": 18.6048,
-  "date": "2022-11-24 15:20:24",
-  "prev_buy": 19.8584525,
-  "prev_sell": 18.597216
+  "sell": 19.8672675,
+  "buy": 18.602304,
+  "date": "2022-11-24 15:30:46",
+  "prev_buy": 19.851175,
+  "prev_sell": 18.58176
 },{
   "bank_id": 29,
   "bank_name": "AMERICAN EXPRESS",
-  "sell": 19.84776585,
-  "buy": 18.92457,
-  "date": "2022-11-24 15:20:25",
-  "prev_buy": 19.82842265,
-  "prev_sell": 18.91685565
+  "sell": 19.83722432,
+  "buy": 18.9220311,
+  "date": "2022-11-24 15:30:46",
+  "prev_buy": 19.82115615,
+  "prev_sell": 18.901134
 },{
   "bank_id": 30,
   "bank_name": "VISA",
-  "sell": 19.8293425,
-  "buy": 18.94395,
-  "date": "2022-11-24 15:20:25",
-  "prev_buy": 19.81001725,
-  "prev_sell": 18.93622775
+  "sell": 19.81881075,
+  "buy": 18.9414085,
+  "date": "2022-11-24 15:30:47",
+  "prev_buy": 19.8027575,
+  "prev_sell": 18.92049
 },{
   "bank_id": 31,
   "bank_name": "MASTERCARD",
-  "sell": 19.8293425,
-  "buy": 18.93426,
-  "date": "2022-11-24 15:20:26",
-  "prev_buy": 19.81001725,
-  "prev_sell": 18.9265417
+  "sell": 19.81881075,
+  "buy": 18.9317198,
+  "date": "2022-11-24 15:30:47",
+  "prev_buy": 19.8027575,
+  "prev_sell": 18.910812
 },{
   "bank_id": 32,
   "bank_name": "BANORTE",
