--- a/indexRt.html
+++ b/indexRt.html
@@ -45751,6 +45751,10 @@
     {
       "Date": "2022-11-24 11:02",
       "Rate": "19.3859"
+    },
+    {
+      "Date": "2022-11-24 12:00",
+      "Rate": "19.3841"
     }
   ]
 }
