--- a/indexRt.html
+++ b/indexRt.html
@@ -45755,6 +45755,10 @@
     {
       "Date": "2022-11-24 12:00",
       "Rate": "19.3841"
+    },
+    {
+      "Date": "2022-11-24 12:02",
+      "Rate": "19.3841"
     }
   ]
 }
