commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45759,6 +45759,10 @@
     {
       "Date": "2022-11-24 12:02",
       "Rate": "19.3841"
+    },
+    {
+      "Date": "2022-11-24 13:00",
+      "Rate": "19.3881"
     }
   ]
 }
