commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45763,6 +45763,10 @@
     {
       "Date": "2022-11-24 13:00",
       "Rate": "19.3881"
+    },
+    {
+      "Date": "2022-11-24 13:02",
+      "Rate": "19.3881"
     }
   ]
 }
