--- a/indexDllIos.html
+++ b/indexDllIos.html
@@ -36,8 +36,8 @@
   "sell": 19.729325,
   "buy": 18.9875,
   "date": "2022-11-24 17:00:10",
-  "prev_buy": 19.6988,
-  "prev_sell": 18.96496
+  "prev_buy": 19.7018525,
+  "prev_sell": 18.96594
 },{
   "bank_id": 6,
   "bank_name": "BANXICO",
@@ -57,11 +57,11 @@
 },{
   "bank_id": 8,
   "bank_name": "BANSI",
-  "sell": 19.6414875,
-  "buy": 19.09718,
-  "date": "2022-11-24 17:00:13",
-  "prev_buy": 19.602,
-  "prev_sell": 19.06172
+  "sell": 19.632375,
+  "buy": 19.084375,
+  "date": "2022-11-24 17:10:13",
+  "prev_buy": 19.6050375,
+  "prev_sell": 19.062705
 },{
   "bank_id": 9,
   "bank_name": "BAJIO",
@@ -89,11 +89,11 @@
 },{
   "bank_id": 12,
   "bank_name": "FAMSA",
-  "sell": 19.78698,
-  "buy": 19.00024,
-  "date": "2022-11-24 17:00:15",
-  "prev_buy": 19.7472,
-  "prev_sell": 18.96496
+  "sell": 19.7778,
+  "buy": 18.9875,
+  "date": "2022-11-24 17:10:16",
+  "prev_buy": 19.75026,
+  "prev_sell": 18.96594
 },{
   "bank_id": 13,
   "bank_name": "BANCOAZTECA",
@@ -108,16 +108,16 @@
   "sell": 20.22,
   "buy": 19.69,
   "date": "2022-11-24 16:40:15",
-  "prev_buy": 20.33,
-  "prev_sell": 19.81
+  "prev_buy": 20.22,
+  "prev_sell": 19.69
 },{
   "bank_id": 15,
   "bank_name": "BANJERCITO",
-  "sell": 19.8982,
-  "buy": 18.8877,
-  "date": "2022-11-24 17:00:16",
-  "prev_buy": 19.8641,
-  "prev_sell": 18.8536
+  "sell": 19.894,
+  "buy": 18.8835,
+  "date": "2022-11-24 17:10:17",
+  "prev_buy": 19.861,
+  "prev_sell": 18.846
 },{
   "bank_id": 16,
   "bank_name": "BANREGIO",
@@ -161,91 +161,91 @@
 },{
   "bank_id": 21,
   "bank_name": "CIBANCO",
-  "sell": 19.709384,
-  "buy": 18.893606,
-  "date": "2022-11-24 17:00:21",
-  "prev_buy": 19.66976,
-  "prev_sell": 18.858524
+  "sell": 19.70024,
+  "buy": 18.8809375,
+  "date": "2022-11-24 17:10:22",
+  "prev_buy": 19.672808,
+  "prev_sell": 18.8594985
 },{
   "bank_id": 22,
   "bank_name": "COMPARTAMOS",
-  "sell": 19.748182,
-  "buy": 18.932382,
-  "date": "2022-11-24 17:00:21",
-  "prev_buy": 19.70848,
-  "prev_sell": 18.897228
+  "sell": 19.73902,
+  "buy": 18.9196875,
+  "date": "2022-11-24 17:10:23",
+  "prev_buy": 19.711534,
+  "prev_sell": 18.8982045
 },{
   "bank_id": 23,
   "bank_name": "BANCOPPEL",
-  "sell": 19.7578815,
-  "buy": 18.75789,
-  "date": "2022-11-24 17:00:22",
-  "prev_buy": 19.71816,
-  "prev_sell": 18.72306
+  "sell": 19.748715,
+  "buy": 18.7453125,
+  "date": "2022-11-24 17:10:23",
+  "prev_buy": 19.7212155,
+  "prev_sell": 18.7240275
 },{
   "bank_id": 24,
   "bank_name": "BANCREA",
-  "sell": 19.7171436,
-  "buy": 18.9537088,
-  "date": "2022-11-24 17:00:22",
-  "prev_buy": 19.677504,
-  "prev_sell": 18.9185152
+  "sell": 19.707996,
+  "buy": 18.941,
+  "date": "2022-11-24 17:10:24",
+  "prev_buy": 19.6805532,
+  "prev_sell": 18.9194928
 },{
   "bank_id": 25,
   "bank_name": "BANKAOOL",
-  "sell": 19.631788,
-  "buy": 18.767584,
-  "date": "2022-11-24 17:00:23",
-  "prev_buy": 19.59232,
-  "prev_sell": 18.732736
+  "sell": 19.62268,
+  "buy": 18.755,
+  "date": "2022-11-24 17:10:25",
+  "prev_buy": 19.595356,
+  "prev_sell": 18.733704
 },{
   "bank_id": 26,
   "bank_name": "BANSEFI",
-  "sell": 19.806379,
-  "buy": 18.554316,
-  "date": "2022-11-24 17:00:23",
-  "prev_buy": 19.76656,
-  "prev_sell": 18.519864
+  "sell": 19.79719,
+  "buy": 18.541875,
+  "date": "2022-11-24 17:10:25",
+  "prev_buy": 19.769623,
+  "prev_sell": 18.520821
 },{
   "bank_id": 27,
   "bank_name": "BANCOFITERRA",
-  "sell": 19.767581,
-  "buy": 18.980852,
-  "date": "2022-11-24 17:00:24",
-  "prev_buy": 19.72784,
-  "prev_sell": 18.945608
+  "sell": 19.75841,
+  "buy": 18.968125,
+  "date": "2022-11-24 17:10:26",
+  "prev_buy": 19.730897,
+  "prev_sell": 18.946587
 },{
   "bank_id": 28,
   "bank_name": "BANCAMIFEL",
-  "sell": 19.883975,
-  "buy": 18.61248,
-  "date": "2022-11-24 17:00:24",
-  "prev_buy": 19.844,
-  "prev_sell": 18.57792
+  "sell": 19.87475,
+  "buy": 18.6,
+  "date": "2022-11-24 17:10:26",
+  "prev_buy": 19.847075,
+  "prev_sell": 18.57888
 },{
   "bank_id": 29,
   "bank_name": "AMERICAN EXPRESS",
-  "sell": 19.85390655,
-  "buy": 18.932382,
-  "date": "2022-11-24 17:00:25",
-  "prev_buy": 19.813992,
-  "prev_sell": 18.897228
+  "sell": 19.8446955,
+  "buy": 18.9196875,
+  "date": "2022-11-24 17:10:27",
+  "prev_buy": 19.81706235,
+  "prev_sell": 18.8982045
 },{
   "bank_id": 30,
   "bank_name": "VISA",
-  "sell": 19.8354775,
-  "buy": 18.95177,
-  "date": "2022-11-24 17:00:26",
-  "prev_buy": 19.7956,
-  "prev_sell": 18.91658
+  "sell": 19.826275,
+  "buy": 18.9390625,
+  "date": "2022-11-24 17:10:27",
+  "prev_buy": 19.7986675,
+  "prev_sell": 18.9175575
 },{
   "bank_id": 31,
   "bank_name": "MASTERCARD",
-  "sell": 19.8354775,
-  "buy": 18.942076,
-  "date": "2022-11-24 17:00:26",
-  "prev_buy": 19.7956,
-  "prev_sell": 18.906904
+  "sell": 19.826275,
+  "buy": 18.929375,
+  "date": "2022-11-24 17:10:28",
+  "prev_buy": 19.7986675,
+  "prev_sell": 18.907881
 },{
   "bank_id": 32,
   "bank_name": "BANORTE",
