--- a/indexRt.html
+++ b/indexRt.html
@@ -45767,6 +45767,10 @@
     {
       "Date": "2022-11-24 13:02",
       "Rate": "19.3881"
+    },
+    {
+      "Date": "2022-11-24 14:00",
+      "Rate": "19.3810"
     }
   ]
 }
