--- a/indexRt.html
+++ b/indexRt.html
@@ -45771,6 +45771,10 @@
     {
       "Date": "2022-11-24 14:00",
       "Rate": "19.3810"
+    },
+    {
+      "Date": "2022-11-24 14:02",
+      "Rate": "19.3810"
     }
   ]
 }
