commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45775,6 +45775,10 @@
     {
       "Date": "2022-11-24 14:02",
       "Rate": "19.3810"
+    },
+    {
+      "Date": "2022-11-24 15:00",
+      "Rate": "19.3795"
     }
   ]
 }
