commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45779,6 +45779,10 @@
     {
       "Date": "2022-11-24 15:00",
       "Rate": "19.3795"
+    },
+    {
+      "Date": "2022-11-24 15:02",
+      "Rate": "19.3795"
     }
   ]
 }
