commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45783,6 +45783,10 @@
     {
       "Date": "2022-11-24 15:02",
       "Rate": "19.3795"
+    },
+    {
+      "Date": "2022-11-24 16:02",
+      "Rate": "19.3856"
     }
   ]
 }
