commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45787,6 +45787,10 @@
     {
       "Date": "2022-11-24 16:02",
       "Rate": "19.3856"
+    },
+    {
+      "Date": "2022-11-24 17:02",
+      "Rate": "19.3936"
     }
   ]
 }
