commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45791,6 +45791,10 @@
     {
       "Date": "2022-11-24 17:02",
       "Rate": "19.3936"
+    },
+    {
+      "Date": "2022-11-24 18:02",
+      "Rate": "19.3824"
     }
   ]
 }
