commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45795,6 +45795,10 @@
     {
       "Date": "2022-11-24 18:02",
       "Rate": "19.3824"
+    },
+    {
+      "Date": "2022-11-24 19:02",
+      "Rate": "19.3794"
     }
   ]
 }
