--- a/indexRt.html
+++ b/indexRt.html
@@ -45799,6 +45799,10 @@
     {
       "Date": "2022-11-24 19:02",
       "Rate": "19.3794"
+    },
+    {
+      "Date": "2022-11-24 20:02",
+      "Rate": "19.3783"
     }
   ]
 }
