commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45803,6 +45803,10 @@
     {
       "Date": "2022-11-24 20:02",
       "Rate": "19.3783"
+    },
+    {
+      "Date": "2022-11-24 21:02",
+      "Rate": "19.3746"
     }
   ]
 }
