commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45807,6 +45807,10 @@
     {
       "Date": "2022-11-24 21:02",
       "Rate": "19.3746"
+    },
+    {
+      "Date": "2022-11-24 22:02",
+      "Rate": "19.3847"
     }
   ]
 }
