commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45811,6 +45811,10 @@
     {
       "Date": "2022-11-24 22:02",
       "Rate": "19.3847"
+    },
+    {
+      "Date": "2022-11-24 23:02",
+      "Rate": "19.3737"
     }
   ]
 }
