commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45815,6 +45815,10 @@
     {
       "Date": "2022-11-24 23:02",
       "Rate": "19.3737"
+    },
+    {
+      "Date": "2022-11-25 00:02",
+      "Rate": "19.3894"
     }
   ]
 }
