commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45819,6 +45819,10 @@
     {
       "Date": "2022-11-25 00:02",
       "Rate": "19.3894"
+    },
+    {
+      "Date": "2022-11-25 01:02",
+      "Rate": "19.3920"
     }
   ]
 }
