commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45823,6 +45823,10 @@
     {
       "Date": "2022-11-25 01:02",
       "Rate": "19.3920"
+    },
+    {
+      "Date": "2022-11-25 02:02",
+      "Rate": "19.4099"
     }
   ]
 }
