commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45827,6 +45827,10 @@
     {
       "Date": "2022-11-25 02:02",
       "Rate": "19.4099"
+    },
+    {
+      "Date": "2022-11-25 03:02",
+      "Rate": "19.4052"
     }
   ]
 }
