commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45831,6 +45831,10 @@
     {
       "Date": "2022-11-25 03:02",
       "Rate": "19.4052"
+    },
+    {
+      "Date": "2022-11-25 04:02",
+      "Rate": "19.4151"
     }
   ]
 }
