commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45835,6 +45835,10 @@
     {
       "Date": "2022-11-25 04:02",
       "Rate": "19.4151"
+    },
+    {
+      "Date": "2022-11-25 05:02",
+      "Rate": "19.3995"
     }
   ]
 }
