--- a/indexRt.html
+++ b/indexRt.html
@@ -45839,6 +45839,10 @@
     {
       "Date": "2022-11-25 05:02",
       "Rate": "19.3995"
+    },
+    {
+      "Date": "2022-11-25 06:00",
+      "Rate": "19.3844"
     }
   ]
 }
