commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45843,6 +45843,10 @@
     {
       "Date": "2022-11-25 06:00",
       "Rate": "19.3844"
+    },
+    {
+      "Date": "2022-11-25 06:02",
+      "Rate": "19.3844"
     }
   ]
 }
