--- a/indexRt.html
+++ b/indexRt.html
@@ -45847,6 +45847,10 @@
     {
       "Date": "2022-11-25 06:02",
       "Rate": "19.3844"
+    },
+    {
+      "Date": "2022-11-25 07:00",
+      "Rate": "19.3720"
     }
   ]
 }
