commit from netcore service

--- a/indexDllIos.html
+++ b/indexDllIos.html
@@ -9,9 +9,9 @@
 },{
   "bank_id": 2,
   "bank_name": "BANAMEX",
-  "sell": 19.84,
+  "sell": 19.82,
   "buy": 18.8,
-  "date": "2022-11-24 16:50:08",
+  "date": "2022-11-25 11:00:08",
   "prev_buy": 19.84,
   "prev_sell": 18.69
 },{
@@ -33,11 +33,11 @@
 },{
   "bank_id": 5,
   "bank_name": "SCOTIABANK",
-  "sell": 19.72169375,
-  "buy": 18.992008,
-  "date": "2022-11-25 10:50:10",
-  "prev_buy": 19.69076175,
-  "prev_sell": 18.963882
+  "sell": 19.718336,
+  "buy": 18.990832,
+  "date": "2022-11-25 11:00:10",
+  "prev_buy": 19.69055825,
+  "prev_sell": 18.963
 },{
   "bank_id": 6,
   "bank_name": "BANXICO",
@@ -57,11 +57,11 @@
 },{
   "bank_id": 8,
   "bank_name": "BANSI",
-  "sell": 19.62478125,
-  "buy": 19.088906,
-  "date": "2022-11-25 10:50:13",
-  "prev_buy": 19.59400125,
-  "prev_sell": 19.0606365
+  "sell": 19.62144,
+  "buy": 19.087724,
+  "date": "2022-11-25 11:00:12",
+  "prev_buy": 19.5957225,
+  "prev_sell": 19.0631975
 },{
   "bank_id": 9,
   "bank_name": "BAJIO",
@@ -89,11 +89,11 @@
 },{
   "bank_id": 12,
   "bank_name": "FAMSA",
-  "sell": 19.77015,
-  "buy": 18.992008,
-  "date": "2022-11-25 10:50:15",
-  "prev_buy": 19.739142,
-  "prev_sell": 18.963882
+  "sell": 19.766784,
+  "buy": 18.990832,
+  "date": "2022-11-25 11:00:14",
+  "prev_buy": 19.740876,
+  "prev_sell": 18.96643
 },{
   "bank_id": 13,
   "bank_name": "BANCOAZTECA",
@@ -105,19 +105,19 @@
 },{
   "bank_id": 14,
   "bank_name": "MONEX",
-  "sell": 20.33,
-  "buy": 19.81,
-  "date": "2022-11-25 10:50:16",
-  "prev_buy": 20.22,
-  "prev_sell": 19.69
+  "sell": 20.22,
+  "buy": 19.69,
+  "date": "2022-11-25 11:00:15",
+  "prev_buy": 20.33,
+  "prev_sell": 19.81
 },{
   "bank_id": 15,
   "bank_name": "BANJERCITO",
-  "sell": 19.8838,
-  "buy": 18.8733,
-  "date": "2022-11-25 10:50:17",
-  "prev_buy": 19.8574,
-  "prev_sell": 18.8469
+  "sell": 19.8573,
+  "buy": 18.8468,
+  "date": "2022-11-25 11:00:15",
+  "prev_buy": 19.8594,
+  "prev_sell": 18.8491
 },{
   "bank_id": 16,
   "bank_name": "BANREGIO",
@@ -161,89 +161,89 @@
 },{
   "bank_id": 21,
   "bank_name": "CIBANCO",
-  "sell": 19.6918072,
-  "buy": 18.88581,
-  "date": "2022-11-25 10:50:25",
-  "prev_buy": 19.6617336,
-  "prev_sell": 18.85745205
+  "sell": 19.6924168,
+  "buy": 18.8863947,
+  "date": "2022-11-25 11:00:19",
+  "prev_buy": 19.6634608,
+  "prev_sell": 18.85998575
 },{
   "bank_id": 22,
   "bank_name": "COMPARTAMOS",
-  "sell": 19.7305706,
-  "buy": 18.92457,
-  "date": "2022-11-25 10:50:26",
-  "prev_buy": 19.7004378,
-  "prev_sell": 18.89615385
+  "sell": 19.7311814,
+  "buy": 18.9251559,
+  "date": "2022-11-25 11:00:20",
+  "prev_buy": 19.7021684,
+  "prev_sell": 18.89869275
 },{
   "bank_id": 23,
   "bank_name": "BANCOPPEL",
-  "sell": 19.74026145,
-  "buy": 18.75015,
-  "date": "2022-11-25 10:50:26",
-  "prev_buy": 19.71011385,
-  "prev_sell": 18.72199575
+  "sell": 19.74087255,
+  "buy": 18.7507305,
+  "date": "2022-11-25 11:00:21",
+  "prev_buy": 19.7118453,
+  "prev_sell": 18.72451125
 },{
   "bank_id": 24,
   "bank_name": "BANCREA",
-  "sell": 19.69955988,
-  "buy": 18.945888,
-  "date": "2022-11-25 10:50:27",
-  "prev_buy": 19.66947444,
-  "prev_sell": 18.91743984
+  "sell": 19.70016972,
+  "buy": 18.94647456,
+  "date": "2022-11-25 11:00:21",
+  "prev_buy": 19.67120232,
+  "prev_sell": 18.9199816
 },{
   "bank_id": 25,
   "bank_name": "BANKAOOL",
-  "sell": 19.6142804,
-  "buy": 18.75984,
-  "date": "2022-11-25 10:50:28",
-  "prev_buy": 19.5843252,
-  "prev_sell": 18.7316712
+  "sell": 19.6148876,
+  "buy": 18.7604208,
+  "date": "2022-11-25 11:00:22",
+  "prev_buy": 19.5860456,
+  "prev_sell": 18.734188
 },{
   "bank_id": 26,
   "bank_name": "BANSEFI",
-  "sell": 19.7887157,
-  "buy": 18.54666,
-  "date": "2022-11-25 10:50:28",
-  "prev_buy": 19.7584941,
-  "prev_sell": 18.5188113
+  "sell": 19.7893283,
+  "buy": 18.5472342,
+  "date": "2022-11-25 11:00:22",
+  "prev_buy": 19.7602298,
+  "prev_sell": 18.5212995
 },{
   "bank_id": 27,
   "bank_name": "BANCOFITERRA",
-  "sell": 19.7499523,
-  "buy": 18.97302,
-  "date": "2022-11-25 10:50:29",
-  "prev_buy": 19.7197899,
-  "prev_sell": 18.9445311
+  "sell": 19.7505637,
+  "buy": 18.9736074,
+  "date": "2022-11-25 11:00:22",
+  "prev_buy": 19.7215222,
+  "prev_sell": 18.9470765
 },{
   "bank_id": 28,
   "bank_name": "BANCAMIFEL",
-  "sell": 19.8662425,
-  "buy": 18.6048,
-  "date": "2022-11-25 10:50:29",
+  "sell": 19.8668575,
+  "buy": 18.605376,
+  "date": "2022-11-25 11:00:23",
   "prev_buy": 19.8359025,
   "prev_sell": 18.576864
 },{
   "bank_id": 29,
   "bank_name": "AMERICAN EXPRESS",
-  "sell": 19.83620087,
-  "buy": 18.92457,
-  "date": "2022-11-25 10:50:30",
+  "sell": 19.83681494,
+  "buy": 18.9251559,
+  "date": "2022-11-25 11:00:23",
   "prev_buy": 19.80590675,
   "prev_sell": 18.89615385
 },{
   "bank_id": 30,
   "bank_name": "VISA",
-  "sell": 19.81778825,
-  "buy": 18.94395,
-  "date": "2022-11-25 10:50:30",
+  "sell": 19.81840175,
+  "buy": 18.9445365,
+  "date": "2022-11-25 11:00:24",
   "prev_buy": 19.78752225,
   "prev_sell": 18.91550475
 },{
   "bank_id": 31,
   "bank_name": "MASTERCARD",
-  "sell": 19.81778825,
-  "buy": 18.93426,
-  "date": "2022-11-25 10:50:31",
+  "sell": 19.81840175,
+  "buy": 18.9348462,
+  "date": "2022-11-25 11:00:25",
   "prev_buy": 19.78752225,
   "prev_sell": 18.9058293
 },{
