--- a/indexRt.html
+++ b/indexRt.html
@@ -45851,6 +45851,10 @@
     {
       "Date": "2022-11-25 07:00",
       "Rate": "19.3720"
+    },
+    {
+      "Date": "2022-11-25 07:02",
+      "Rate": "19.3720"
     }
   ]
 }
