commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45855,6 +45855,10 @@
     {
       "Date": "2022-11-25 07:02",
       "Rate": "19.3720"
+    },
+    {
+      "Date": "2022-11-25 08:00",
+      "Rate": "19.3337"
     }
   ]
 }
