commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45859,6 +45859,10 @@
     {
       "Date": "2022-11-25 08:00",
       "Rate": "19.3337"
+    },
+    {
+      "Date": "2022-11-25 09:00",
+      "Rate": "19.3347"
     }
   ]
 }
