commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45863,6 +45863,10 @@
     {
       "Date": "2022-11-25 09:00",
       "Rate": "19.3347"
+    },
+    {
+      "Date": "2022-11-25 10:00",
+      "Rate": "19.3134"
     }
   ]
 }
