commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45867,6 +45867,10 @@
     {
       "Date": "2022-11-25 10:00",
       "Rate": "19.3134"
+    },
+    {
+      "Date": "2022-11-25 11:00",
+      "Rate": "19.3328"
     }
   ]
 }
