commit from netcore service

--- a/indexDllIos.html
+++ b/indexDllIos.html
@@ -33,11 +33,11 @@
 },{
   "bank_id": 5,
   "bank_name": "SCOTIABANK",
-  "sell": 19.67387125,
-  "buy": 18.943792,
-  "date": "2022-11-25 15:20:11",
-  "prev_buy": 19.7323775,
-  "prev_sell": 18.9924
+  "sell": 19.6623735,
+  "buy": 18.92527,
+  "date": "2022-11-25 15:40:10",
+  "prev_buy": 19.7189465,
+  "prev_sell": 18.989656
 },{
   "bank_id": 6,
   "bank_name": "BANXICO",
@@ -57,11 +57,11 @@
 },{
   "bank_id": 8,
   "bank_name": "BANSI",
-  "sell": 19.57699125,
-  "buy": 19.0407395,
-  "date": "2022-11-25 15:20:13",
-  "prev_buy": 19.6354125,
-  "prev_sell": 19.0893
+  "sell": 19.5657525,
+  "buy": 19.0218275,
+  "date": "2022-11-25 15:40:13",
+  "prev_buy": 19.6220475,
+  "prev_sell": 19.086542
 },{
   "bank_id": 9,
   "bank_name": "BAJIO",
@@ -89,11 +89,11 @@
 },{
   "bank_id": 12,
   "bank_name": "FAMSA",
-  "sell": 19.722006,
-  "buy": 18.944086,
-  "date": "2022-11-25 15:20:16",
-  "prev_buy": 19.78086,
-  "prev_sell": 18.9924
+  "sell": 19.710684,
+  "buy": 18.92527,
+  "date": "2022-11-25 15:40:15",
+  "prev_buy": 19.767396,
+  "prev_sell": 18.989656
 },{
   "bank_id": 13,
   "bank_name": "BANCOAZTECA",
@@ -105,19 +105,19 @@
 },{
   "bank_id": 14,
   "bank_name": "MONEX",
-  "sell": 20.33,
-  "buy": 19.81,
-  "date": "2022-11-25 15:20:17",
+  "sell": 20.22,
+  "buy": 19.69,
+  "date": "2022-11-25 15:30:25",
   "prev_buy": 20.22,
   "prev_sell": 19.69
 },{
   "bank_id": 15,
   "bank_name": "BANJERCITO",
-  "sell": 19.8392,
-  "buy": 18.8287,
-  "date": "2022-11-25 15:20:17",
-  "prev_buy": 19.8875,
-  "prev_sell": 18.877
+  "sell": 19.857,
+  "buy": 18.828,
+  "date": "2022-11-25 15:40:17",
+  "prev_buy": 19.8919,
+  "prev_sell": 18.8814
 },{
   "bank_id": 16,
   "bank_name": "BANREGIO",
@@ -161,91 +161,91 @@
 },{
   "bank_id": 21,
   "bank_name": "CIBANCO",
-  "sell": 19.6446648,
-  "buy": 18.83776715,
-  "date": "2022-11-25 15:20:21",
-  "prev_buy": 19.703288,
-  "prev_sell": 18.88581
+  "sell": 19.6333872,
+  "buy": 18.81905675,
+  "date": "2022-11-25 15:40:22",
+  "prev_buy": 19.6928232,
+  "prev_sell": 18.8832763
 },{
   "bank_id": 22,
   "bank_name": "COMPARTAMOS",
-  "sell": 19.6833354,
-  "buy": 18.87642855,
-  "date": "2022-11-25 15:20:22",
-  "prev_buy": 19.742074,
-  "prev_sell": 18.92457
+  "sell": 19.6720356,
+  "buy": 18.85767975,
+  "date": "2022-11-25 15:40:22",
+  "prev_buy": 19.7315886,
+  "prev_sell": 18.9220311
 },{
   "bank_id": 23,
   "bank_name": "BANCOPPEL",
-  "sell": 19.69300305,
-  "buy": 18.70245225,
-  "date": "2022-11-25 15:20:22",
-  "prev_buy": 19.7517705,
-  "prev_sell": 18.75015
+  "sell": 19.6816977,
+  "buy": 18.68387625,
+  "date": "2022-11-25 15:40:23",
+  "prev_buy": 19.74127995,
+  "prev_sell": 18.7476345
 },{
   "bank_id": 24,
   "bank_name": "BANCREA",
-  "sell": 19.65239892,
-  "buy": 18.89769232,
-  "date": "2022-11-25 15:20:23",
-  "prev_buy": 19.7110452,
-  "prev_sell": 18.945888
+  "sell": 19.64111688,
+  "buy": 18.8789224,
+  "date": "2022-11-25 15:40:23",
+  "prev_buy": 19.70057628,
+  "prev_sell": 18.94334624
 },{
   "bank_id": 25,
   "bank_name": "BANKAOOL",
-  "sell": 19.5673236,
-  "buy": 18.7121176,
-  "date": "2022-11-25 15:20:24",
-  "prev_buy": 19.625716,
-  "prev_sell": 18.75984
+  "sell": 19.5560904,
+  "buy": 18.693532,
+  "date": "2022-11-25 15:40:24",
+  "prev_buy": 19.6152924,
+  "prev_sell": 18.7573232
 },{
   "bank_id": 26,
   "bank_name": "BANSEFI",
-  "sell": 19.7413413,
-  "buy": 18.4994799,
-  "date": "2022-11-25 15:20:24",
-  "prev_buy": 19.800253,
-  "prev_sell": 18.54666
+  "sell": 19.7300082,
+  "buy": 18.4811055,
+  "date": "2022-11-25 15:40:25",
+  "prev_buy": 19.7897367,
+  "prev_sell": 18.5441718
 },{
   "bank_id": 27,
   "bank_name": "BANCOFITERRA",
-  "sell": 19.7026707,
-  "buy": 18.9247553,
-  "date": "2022-11-25 15:20:25",
-  "prev_buy": 19.761467,
-  "prev_sell": 18.97302
+  "sell": 19.6913598,
+  "buy": 18.9059585,
+  "date": "2022-11-25 15:40:25",
+  "prev_buy": 19.7509713,
+  "prev_sell": 18.9704746
 },{
   "bank_id": 28,
   "bank_name": "BANCAMIFEL",
-  "sell": 19.8186825,
-  "buy": 18.557472,
-  "date": "2022-11-25 15:20:25",
-  "prev_buy": 19.877825,
-  "prev_sell": 18.6048
+  "sell": 19.807305,
+  "buy": 18.53904,
+  "date": "2022-11-25 15:40:26",
+  "prev_buy": 19.8672675,
+  "prev_sell": 18.602304
 },{
   "bank_id": 29,
   "bank_name": "AMERICAN EXPRESS",
-  "sell": 19.78871279,
-  "buy": 18.87642855,
-  "date": "2022-11-25 15:20:26",
-  "prev_buy": 19.84776585,
-  "prev_sell": 18.92457
+  "sell": 19.77735249,
+  "buy": 18.85767975,
+  "date": "2022-11-25 15:40:26",
+  "prev_buy": 19.83722432,
+  "prev_sell": 18.9220311
 },{
   "bank_id": 30,
   "bank_name": "VISA",
-  "sell": 19.77034425,
-  "buy": 18.89575925,
-  "date": "2022-11-25 15:20:27",
-  "prev_buy": 19.8293425,
-  "prev_sell": 18.94395
+  "sell": 19.7589945,
+  "buy": 18.87699125,
+  "date": "2022-11-25 15:40:27",
+  "prev_buy": 19.81881075,
+  "prev_sell": 18.9414085
 },{
   "bank_id": 31,
   "bank_name": "MASTERCARD",
-  "sell": 19.77034425,
-  "buy": 18.8860939,
-  "date": "2022-11-25 15:20:27",
-  "prev_buy": 19.8293425,
-  "prev_sell": 18.93426
+  "sell": 19.7589945,
+  "buy": 18.8673355,
+  "date": "2022-11-25 15:40:28",
+  "prev_buy": 19.81881075,
+  "prev_sell": 18.9317198
 },{
   "bank_id": 32,
   "bank_name": "BANORTE",
