commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45871,6 +45871,10 @@
     {
       "Date": "2022-11-25 11:00",
       "Rate": "19.3328"
+    },
+    {
+      "Date": "2022-11-25 12:00",
+      "Rate": "19.3132"
     }
   ]
 }
