commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45875,6 +45875,10 @@
     {
       "Date": "2022-11-25 12:00",
       "Rate": "19.3132"
+    },
+    {
+      "Date": "2022-11-25 13:00",
+      "Rate": "19.3321"
     }
   ]
 }
