commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45879,6 +45879,10 @@
     {
       "Date": "2022-11-25 13:00",
       "Rate": "19.3321"
+    },
+    {
+      "Date": "2022-11-25 14:00",
+      "Rate": "19.3413"
     }
   ]
 }
