commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45883,6 +45883,10 @@
     {
       "Date": "2022-11-25 14:00",
       "Rate": "19.3413"
+    },
+    {
+      "Date": "2022-11-25 15:00",
+      "Rate": "19.3413"
     }
   ]
 }
