commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45887,6 +45887,10 @@
     {
       "Date": "2022-11-25 15:00",
       "Rate": "19.3413"
+    },
+    {
+      "Date": "2022-11-25 16:00",
+      "Rate": "19.3319"
     }
   ]
 }
