--- a/indexDllIos.html
+++ b/indexDllIos.html
@@ -9,9 +9,9 @@
 },{
   "bank_id": 2,
   "bank_name": "BANAMEX",
-  "sell": 19.82,
-  "buy": 18.74,
-  "date": "2022-11-25 11:40:09",
+  "sell": 19.85,
+  "buy": 18.71,
+  "date": "2022-11-28 10:20:08",
   "prev_buy": 19.82,
   "prev_sell": 18.74
 },{
@@ -33,9 +33,9 @@
 },{
   "bank_id": 5,
   "bank_name": "SCOTIABANK",
-  "sell": 19.7283075,
-  "buy": 18.9189,
-  "date": "2022-11-25 17:50:11",
+  "sell": 19.69320375,
+  "buy": 18.965156,
+  "date": "2022-11-28 11:20:11",
   "prev_buy": 19.7283075,
   "prev_sell": 18.9189
 },{
@@ -57,9 +57,9 @@
 },{
   "bank_id": 8,
   "bank_name": "BANSI",
-  "sell": 19.6313625,
-  "buy": 19.015425,
-  "date": "2022-11-25 17:50:13",
+  "sell": 19.59643125,
+  "buy": 19.061917,
+  "date": "2022-11-28 11:20:14",
   "prev_buy": 19.6313625,
   "prev_sell": 19.015425
 },{
@@ -89,9 +89,9 @@
 },{
   "bank_id": 12,
   "bank_name": "FAMSA",
-  "sell": 19.77678,
-  "buy": 18.9189,
-  "date": "2022-11-25 17:50:16",
+  "sell": 19.74159,
+  "buy": 18.965156,
+  "date": "2022-11-28 11:20:16",
   "prev_buy": 19.77678,
   "prev_sell": 18.9189
 },{
@@ -105,17 +105,17 @@
 },{
   "bank_id": 14,
   "bank_name": "MONEX",
-  "sell": 20.33,
-  "buy": 19.81,
-  "date": "2022-11-27 14:20:16",
-  "prev_buy": 20.33,
-  "prev_sell": 19.81
+  "sell": 20.22,
+  "buy": 19.69,
+  "date": "2022-11-28 11:20:18",
+  "prev_buy": 20.22,
+  "prev_sell": 19.69
 },{
   "bank_id": 15,
   "bank_name": "BANJERCITO",
-  "sell": 19.85,
-  "buy": 18.807,
-  "date": "2022-11-25 18:20:18",
+  "sell": 19.862,
+  "buy": 18.857,
+  "date": "2022-11-28 11:20:18",
   "prev_buy": 19.85,
   "prev_sell": 18.807
 },{
@@ -129,8 +129,8 @@
 },{
   "bank_id": 17,
   "bank_name": "DOF",
-  "sell": 19.5585,
-  "buy": 19.5585,
+  "sell": " 19.3393",
+  "buy": " 19.3393",
   "date": "2022-06-03 07:10:28",
   "prev_buy": 19.5585,
   "prev_sell": 19.5585
@@ -153,97 +153,97 @@
 },{
   "bank_id": 20,
   "bank_name": "SAT",
-  "sell": 19.3692,
-  "buy": 19.3692,
-  "date": "2022-11-25 02:10:20",
+  "sell": " 19.3393",
+  "buy": " 19.3393",
+  "date": "2022-11-28 02:10:23",
   "prev_buy": 19.3692,
   "prev_sell": 19.3692
 },{
   "bank_id": 21,
   "bank_name": "CIBANCO",
-  "sell": 19.699224,
-  "buy": 18.8127225,
-  "date": "2022-11-25 17:50:24",
+  "sell": 19.664172,
+  "buy": 18.8587189,
+  "date": "2022-11-28 11:20:23",
   "prev_buy": 19.699224,
   "prev_sell": 18.8127225
 },{
   "bank_id": 22,
   "bank_name": "COMPARTAMOS",
-  "sell": 19.738002,
-  "buy": 18.8513325,
-  "date": "2022-11-25 17:50:24",
+  "sell": 19.702881,
+  "buy": 18.8974233,
+  "date": "2022-11-28 11:20:24",
   "prev_buy": 19.738002,
   "prev_sell": 18.8513325
 },{
   "bank_id": 23,
   "bank_name": "BANCOPPEL",
-  "sell": 19.7476965,
-  "buy": 18.6775875,
-  "date": "2022-11-25 17:50:25",
+  "sell": 19.71255825,
+  "buy": 18.7232535,
+  "date": "2022-11-28 11:20:25",
   "prev_buy": 19.7476965,
   "prev_sell": 18.6775875
 },{
   "bank_id": 24,
   "bank_name": "BANCREA",
-  "sell": 19.7069796,
-  "buy": 18.872568,
-  "date": "2022-11-25 17:50:25",
+  "sell": 19.6719138,
+  "buy": 18.91871072,
+  "date": "2022-11-28 11:20:26",
   "prev_buy": 19.7069796,
   "prev_sell": 18.872568
 },{
   "bank_id": 25,
   "bank_name": "BANKAOOL",
-  "sell": 19.621668,
-  "buy": 18.68724,
-  "date": "2022-11-25 17:50:26",
+  "sell": 19.586754,
+  "buy": 18.7329296,
+  "date": "2022-11-28 11:20:26",
   "prev_buy": 19.621668,
   "prev_sell": 18.68724
 },{
   "bank_id": 26,
   "bank_name": "BANSEFI",
-  "sell": 19.796169,
-  "buy": 18.474885,
-  "date": "2022-11-25 17:50:27",
+  "sell": 19.7609445,
+  "buy": 18.5200554,
+  "date": "2022-11-28 11:20:27",
   "prev_buy": 19.796169,
   "prev_sell": 18.474885
 },{
   "bank_id": 27,
   "bank_name": "BANCOFITERRA",
-  "sell": 19.757391,
-  "buy": 18.899595,
-  "date": "2022-11-25 17:50:27",
+  "sell": 19.7222355,
+  "buy": 18.9458038,
+  "date": "2022-11-28 11:20:27",
   "prev_buy": 19.757391,
   "prev_sell": 18.899595
 },{
   "bank_id": 28,
   "bank_name": "BANCAMIFEL",
-  "sell": 19.873725,
-  "buy": 18.5328,
-  "date": "2022-11-25 17:50:28",
+  "sell": 19.8383625,
+  "buy": 18.578112,
+  "date": "2022-11-28 11:20:27",
   "prev_buy": 19.873725,
   "prev_sell": 18.5328
 },{
   "bank_id": 29,
   "bank_name": "AMERICAN EXPRESS",
-  "sell": 19.84367205,
-  "buy": 18.8513325,
-  "date": "2022-11-25 17:50:28",
+  "sell": 19.80836303,
+  "buy": 18.8974233,
+  "date": "2022-11-28 11:20:28",
   "prev_buy": 19.84367205,
   "prev_sell": 18.8513325
 },{
   "bank_id": 30,
   "bank_name": "VISA",
-  "sell": 19.8252525,
-  "buy": 18.8706375,
-  "date": "2022-11-25 17:50:29",
+  "sell": 19.78997625,
+  "buy": 18.9167755,
+  "date": "2022-11-28 11:20:28",
   "prev_buy": 19.8252525,
   "prev_sell": 18.8706375
 },{
   "bank_id": 31,
   "bank_name": "MASTERCARD",
-  "sell": 19.8252525,
-  "buy": 18.860985,
-  "date": "2022-11-25 17:50:30",
+  "sell": 19.78997625,
+  "buy": 18.9070994,
+  "date": "2022-11-28 11:20:29",
   "prev_buy": 19.8252525,
   "prev_sell": 18.860985
 },{
