commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45891,6 +45891,10 @@
     {
       "Date": "2022-11-25 16:00",
       "Rate": "19.3319"
+    },
+    {
+      "Date": "2022-11-28 08:00",
+      "Rate": "19.3038"
     }
   ]
 }
