--- a/indexRt.html
+++ b/indexRt.html
@@ -45895,6 +45895,10 @@
     {
       "Date": "2022-11-28 08:00",
       "Rate": "19.3038"
+    },
+    {
+      "Date": "2022-11-28 09:00",
+      "Rate": "19.3106"
     }
   ]
 }
