commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45899,6 +45899,10 @@
     {
       "Date": "2022-11-28 09:00",
       "Rate": "19.3106"
+    },
+    {
+      "Date": "2022-11-28 10:00",
+      "Rate": "19.3048"
     }
   ]
 }
