commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45903,6 +45903,10 @@
     {
       "Date": "2022-11-28 10:00",
       "Rate": "19.3048"
+    },
+    {
+      "Date": "2022-11-28 11:00",
+      "Rate": "19.2971"
     }
   ]
 }
