commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45907,6 +45907,10 @@
     {
       "Date": "2022-11-28 11:00",
       "Rate": "19.2971"
+    },
+    {
+      "Date": "2022-11-28 12:00",
+      "Rate": "19.3006"
     }
   ]
 }
