commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45911,6 +45911,10 @@
     {
       "Date": "2022-11-28 12:00",
       "Rate": "19.3006"
+    },
+    {
+      "Date": "2022-11-28 13:00",
+      "Rate": "19.3126"
     }
   ]
 }
