--- a/indexRt.html
+++ b/indexRt.html
@@ -45915,6 +45915,10 @@
     {
       "Date": "2022-11-28 13:00",
       "Rate": "19.3126"
+    },
+    {
+      "Date": "2022-11-28 14:00",
+      "Rate": "19.3044"
     }
   ]
 }
