--- a/indexRt.html
+++ b/indexRt.html
@@ -45919,6 +45919,10 @@
     {
       "Date": "2022-11-28 14:00",
       "Rate": "19.3044"
+    },
+    {
+      "Date": "2022-11-28 15:00",
+      "Rate": "19.3063"
     }
   ]
 }
