--- a/indexRt.html
+++ b/indexRt.html
@@ -45923,6 +45923,10 @@
     {
       "Date": "2022-11-28 15:00",
       "Rate": "19.3063"
+    },
+    {
+      "Date": "2022-11-28 16:00",
+      "Rate": "19.3113"
     }
   ]
 }
