commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45927,6 +45927,10 @@
     {
       "Date": "2022-11-28 16:00",
       "Rate": "19.3113"
+    },
+    {
+      "Date": "2022-11-28 17:00",
+      "Rate": "19.3118"
     }
   ]
 }
