--- a/indexRt.html
+++ b/indexRt.html
@@ -45931,6 +45931,10 @@
     {
       "Date": "2022-11-28 17:00",
       "Rate": "19.3118"
+    },
+    {
+      "Date": "2022-11-28 18:00",
+      "Rate": "19.3013"
     }
   ]
 }
