--- a/indexRt.html
+++ b/indexRt.html
@@ -45935,6 +45935,10 @@
     {
       "Date": "2022-11-28 18:00",
       "Rate": "19.3013"
+    },
+    {
+      "Date": "2022-11-28 19:00",
+      "Rate": "19.3031"
     }
   ]
 }
