commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45939,6 +45939,10 @@
     {
       "Date": "2022-11-28 19:00",
       "Rate": "19.3031"
+    },
+    {
+      "Date": "2022-11-28 20:00",
+      "Rate": "19.2792"
     }
   ]
 }
