commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45943,6 +45943,10 @@
     {
       "Date": "2022-11-28 20:00",
       "Rate": "19.2792"
+    },
+    {
+      "Date": "2022-11-29 06:00",
+      "Rate": "19.1306"
     }
   ]
 }
