commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45947,6 +45947,10 @@
     {
       "Date": "2022-11-29 06:00",
       "Rate": "19.1306"
+    },
+    {
+      "Date": "2022-11-29 07:00",
+      "Rate": "19.1686"
     }
   ]
 }
