commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45951,6 +45951,10 @@
     {
       "Date": "2022-11-29 07:00",
       "Rate": "19.1686"
+    },
+    {
+      "Date": "2022-11-29 08:00",
+      "Rate": "19.2094"
     }
   ]
 }
