commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45955,6 +45955,10 @@
     {
       "Date": "2022-11-29 08:00",
       "Rate": "19.2094"
+    },
+    {
+      "Date": "2022-11-29 09:00",
+      "Rate": "19.2211"
     }
   ]
 }
