commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45959,6 +45959,10 @@
     {
       "Date": "2022-11-29 09:00",
       "Rate": "19.2211"
+    },
+    {
+      "Date": "2022-11-29 10:00",
+      "Rate": "19.2739"
     }
   ]
 }
