commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45963,6 +45963,10 @@
     {
       "Date": "2022-11-29 10:00",
       "Rate": "19.2739"
+    },
+    {
+      "Date": "2022-11-29 11:00",
+      "Rate": "19.2435"
     }
   ]
 }
