--- a/indexRt.html
+++ b/indexRt.html
@@ -45967,6 +45967,10 @@
     {
       "Date": "2022-11-29 11:00",
       "Rate": "19.2435"
+    },
+    {
+      "Date": "2022-11-29 12:00",
+      "Rate": "19.2223"
     }
   ]
 }
