commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45971,6 +45971,10 @@
     {
       "Date": "2022-11-29 12:00",
       "Rate": "19.2223"
+    },
+    {
+      "Date": "2022-11-29 13:00",
+      "Rate": "19.2344"
     }
   ]
 }
