--- a/indexRt.html
+++ b/indexRt.html
@@ -45975,6 +45975,10 @@
     {
       "Date": "2022-11-29 13:00",
       "Rate": "19.2344"
+    },
+    {
+      "Date": "2022-11-29 14:00",
+      "Rate": "19.2297"
     }
   ]
 }
