commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45979,6 +45979,10 @@
     {
       "Date": "2022-11-29 14:00",
       "Rate": "19.2297"
+    },
+    {
+      "Date": "2022-11-29 15:00",
+      "Rate": "19.2249"
     }
   ]
 }
