commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45983,6 +45983,10 @@
     {
       "Date": "2022-11-29 15:00",
       "Rate": "19.2249"
+    },
+    {
+      "Date": "2022-11-29 16:00",
+      "Rate": "19.2353"
     }
   ]
 }
