commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45987,6 +45987,10 @@
     {
       "Date": "2022-11-29 16:00",
       "Rate": "19.2353"
+    },
+    {
+      "Date": "2022-11-29 17:00",
+      "Rate": "19.2260"
     }
   ]
 }
