commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45991,6 +45991,10 @@
     {
       "Date": "2022-11-29 17:00",
       "Rate": "19.2260"
+    },
+    {
+      "Date": "2022-11-29 18:00",
+      "Rate": "19.2288"
     }
   ]
 }
