commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45995,6 +45995,10 @@
     {
       "Date": "2022-11-29 18:00",
       "Rate": "19.2288"
+    },
+    {
+      "Date": "2022-11-29 19:00",
+      "Rate": "19.2263"
     }
   ]
 }
