--- a/indexRt.html
+++ b/indexRt.html
@@ -45999,6 +45999,10 @@
     {
       "Date": "2022-11-29 19:00",
       "Rate": "19.2263"
+    },
+    {
+      "Date": "2022-11-29 20:00",
+      "Rate": "19.2208"
     }
   ]
 }
