commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46003,6 +46003,10 @@
     {
       "Date": "2022-11-29 20:00",
       "Rate": "19.2208"
+    },
+    {
+      "Date": "2022-11-29 21:00",
+      "Rate": "19.2104"
     }
   ]
 }
