--- a/indexRt.html
+++ b/indexRt.html
@@ -46007,6 +46007,10 @@
     {
       "Date": "2022-11-29 21:00",
       "Rate": "19.2104"
+    },
+    {
+      "Date": "2022-11-29 22:00",
+      "Rate": "19.2210"
     }
   ]
 }
