commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46011,6 +46011,10 @@
     {
       "Date": "2022-11-29 22:00",
       "Rate": "19.2210"
+    },
+    {
+      "Date": "2022-11-29 23:00",
+      "Rate": "19.2139"
     }
   ]
 }
