--- a/indexRt.html
+++ b/indexRt.html
@@ -46015,6 +46015,10 @@
     {
       "Date": "2022-11-29 23:00",
       "Rate": "19.2139"
+    },
+    {
+      "Date": "2022-11-30 00:00",
+      "Rate": "19.2119"
     }
   ]
 }
