--- a/indexRt.html
+++ b/indexRt.html
@@ -46019,6 +46019,10 @@
     {
       "Date": "2022-11-30 00:00",
       "Rate": "19.2119"
+    },
+    {
+      "Date": "2022-11-30 01:00",
+      "Rate": "19.2106"
     }
   ]
 }
