commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46023,6 +46023,10 @@
     {
       "Date": "2022-11-30 01:00",
       "Rate": "19.2106"
+    },
+    {
+      "Date": "2022-11-30 02:00",
+      "Rate": "19.2368"
     }
   ]
 }
