commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46027,6 +46027,10 @@
     {
       "Date": "2022-11-30 02:00",
       "Rate": "19.2368"
+    },
+    {
+      "Date": "2022-11-30 03:00",
+      "Rate": "19.2752"
     }
   ]
 }
