commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46031,6 +46031,10 @@
     {
       "Date": "2022-11-30 03:00",
       "Rate": "19.2752"
+    },
+    {
+      "Date": "2022-11-30 04:00",
+      "Rate": "19.2743"
     }
   ]
 }
