--- a/indexRt.html
+++ b/indexRt.html
@@ -46035,6 +46035,10 @@
     {
       "Date": "2022-11-30 04:00",
       "Rate": "19.2743"
+    },
+    {
+      "Date": "2022-11-30 05:00",
+      "Rate": "19.2751"
     }
   ]
 }
