commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46039,6 +46039,10 @@
     {
       "Date": "2022-11-30 05:00",
       "Rate": "19.2751"
+    },
+    {
+      "Date": "2022-11-30 06:00",
+      "Rate": "19.3047"
     }
   ]
 }
