--- a/indexRt.html
+++ b/indexRt.html
@@ -46043,6 +46043,10 @@
     {
       "Date": "2022-11-30 06:00",
       "Rate": "19.3047"
+    },
+    {
+      "Date": "2022-11-30 07:00",
+      "Rate": "19.3394"
     }
   ]
 }
