--- a/indexDllIos.html
+++ b/indexDllIos.html
@@ -1,19 +1,19 @@
 {"banks":[{
   "bank_id": 1,
   "bank_name": "",
-  "sell": 19.8,
-  "buy": 18.4,
-  "date": "2022-11-29 12:20:08",
+  "sell": 19.9,
+  "buy": 18.5,
+  "date": "2022-11-30 11:10:09",
   "prev_buy": 19.7,
   "prev_sell": 18.3
 },{
   "bank_id": 2,
   "bank_name": "BANAMEX",
-  "sell": 19.79,
-  "buy": 18.65,
-  "date": "2022-11-30 10:10:08",
-  "prev_buy": 19.61,
-  "prev_sell": 18.47
+  "sell": 19.83,
+  "buy": 18.76,
+  "date": "2022-11-30 11:10:09",
+  "prev_buy": 19.65,
+  "prev_sell": 18.58
 },{
   "bank_id": 3,
   "bank_name": "SANTANDER",
@@ -33,11 +33,11 @@
 },{
   "bank_id": 5,
   "bank_name": "SCOTIABANK",
-  "sell": 19.62788025,
-  "buy": 18.903808,
-  "date": "2022-11-30 10:50:10",
-  "prev_buy": 19.47647625,
-  "prev_sell": 18.756808
+  "sell": 19.664612,
+  "buy": 18.938108,
+  "date": "2022-11-30 11:10:10",
+  "prev_buy": 19.47138875,
+  "prev_sell": 18.751908
 },{
   "bank_id": 6,
   "bank_name": "BANXICO",
@@ -51,17 +51,17 @@
   "bank_name": "IXE",
   "sell": 19.55,
   "buy": 18.15,
-  "date": "2022-11-30 10:50:12",
-  "prev_buy": 19.55,
-  "prev_sell": 18.15
+  "date": "2022-11-30 11:10:12",
+  "prev_buy": 19.35,
+  "prev_sell": 17.95
 },{
   "bank_id": 8,
   "bank_name": "BANSI",
-  "sell": 19.53234,
-  "buy": 19.00065,
-  "date": "2022-11-30 10:50:13",
-  "prev_buy": 19.38076875,
-  "prev_sell": 18.852506
+  "sell": 19.56798,
+  "buy": 19.034731,
+  "date": "2022-11-30 11:10:12",
+  "prev_buy": 19.37651625,
+  "prev_sell": 18.8480735
 },{
   "bank_id": 9,
   "bank_name": "BAJIO",
@@ -89,11 +89,11 @@
 },{
   "bank_id": 12,
   "bank_name": "FAMSA",
-  "sell": 19.677024,
-  "buy": 18.9042,
-  "date": "2022-11-30 10:50:15",
-  "prev_buy": 19.52433,
-  "prev_sell": 18.756808
+  "sell": 19.712928,
+  "buy": 18.938108,
+  "date": "2022-11-30 11:10:14",
+  "prev_buy": 19.520046,
+  "prev_sell": 18.752398
 },{
   "bank_id": 13,
   "bank_name": "BANCOAZTECA",
@@ -113,11 +113,11 @@
 },{
   "bank_id": 15,
   "bank_name": "BANJERCITO",
-  "sell": 19.8176,
-  "buy": 18.8071,
-  "date": "2022-11-30 10:50:16",
-  "prev_buy": 19.632,
-  "prev_sell": 18.618
+  "sell": 19.8447,
+  "buy": 18.8342,
+  "date": "2022-11-30 11:10:15",
+  "prev_buy": 19.679,
+  "prev_sell": 18.665
 },{
   "bank_id": 16,
   "bank_name": "BANREGIO",
@@ -161,99 +161,99 @@
 },{
   "bank_id": 21,
   "bank_name": "CIBANCO",
-  "sell": 19.5998592,
-  "buy": 18.798105,
-  "date": "2022-11-30 10:50:21",
-  "prev_buy": 19.4449192,
-  "prev_sell": 18.64851925
+  "sell": 19.6389752,
+  "buy": 18.8355258,
+  "date": "2022-11-30 11:10:20",
+  "prev_buy": 19.4434968,
+  "prev_sell": 18.64715495
 },{
   "bank_id": 22,
   "bank_name": "COMPARTAMOS",
-  "sell": 19.6384416,
-  "buy": 18.836685,
-  "date": "2022-11-30 10:50:21",
-  "prev_buy": 19.4831966,
-  "prev_sell": 18.68679225
+  "sell": 19.6776346,
+  "buy": 18.8741826,
+  "date": "2022-11-30 11:10:21",
+  "prev_buy": 19.4817714,
+  "prev_sell": 18.68542515
 },{
   "bank_id": 23,
   "bank_name": "BANCOPPEL",
-  "sell": 19.6480872,
-  "buy": 18.663075,
-  "date": "2022-11-30 10:50:21",
-  "prev_buy": 19.49276595,
-  "prev_sell": 18.51456375
+  "sell": 19.68729945,
+  "buy": 18.700227,
+  "date": "2022-11-30 11:10:21",
+  "prev_buy": 19.49134005,
+  "prev_sell": 18.51320925
 },{
   "bank_id": 24,
   "bank_name": "BANCREA",
-  "sell": 19.60757568,
-  "buy": 18.857904,
-  "date": "2022-11-30 10:50:22",
-  "prev_buy": 19.45257468,
-  "prev_sell": 18.7078424
+  "sell": 19.64670708,
+  "buy": 18.89544384,
+  "date": "2022-11-30 11:10:22",
+  "prev_buy": 19.45115172,
+  "prev_sell": 18.70647376
 },{
   "bank_id": 25,
   "bank_name": "BANKAOOL",
-  "sell": 19.5226944,
-  "buy": 18.67272,
-  "date": "2022-11-30 10:50:23",
-  "prev_buy": 19.3683644,
-  "prev_sell": 18.524132
+  "sell": 19.5616564,
+  "buy": 18.7098912,
+  "date": "2022-11-30 11:10:22",
+  "prev_buy": 19.3669476,
+  "prev_sell": 18.5227768
 },{
   "bank_id": 26,
   "bank_name": "BANSEFI",
-  "sell": 19.6963152,
-  "buy": 18.46053,
-  "date": "2022-11-30 10:50:23",
-  "prev_buy": 19.5406127,
-  "prev_sell": 18.3136305
+  "sell": 19.7356237,
+  "buy": 18.4972788,
+  "date": "2022-11-30 11:10:23",
+  "prev_buy": 19.5391833,
+  "prev_sell": 18.3122907
 },{
   "bank_id": 27,
   "bank_name": "BANCOFITERRA",
-  "sell": 19.6577328,
-  "buy": 18.88491,
-  "date": "2022-11-30 10:50:24",
-  "prev_buy": 19.5023353,
-  "prev_sell": 18.7346335
+  "sell": 19.6969643,
+  "buy": 18.9225036,
+  "date": "2022-11-30 11:10:23",
+  "prev_buy": 19.5009087,
+  "prev_sell": 18.7332629
 },{
   "bank_id": 28,
   "bank_name": "BANCAMIFEL",
-  "sell": 19.77348,
-  "buy": 18.5184,
-  "date": "2022-11-30 10:50:24",
-  "prev_buy": 19.6171675,
-  "prev_sell": 18.37104
+  "sell": 19.8129425,
+  "buy": 18.555264,
+  "date": "2022-11-30 11:10:23",
+  "prev_buy": 19.6157325,
+  "prev_sell": 18.369696
 },{
   "bank_id": 29,
   "bank_name": "AMERICAN EXPRESS",
-  "sell": 19.74357864,
-  "buy": 18.836685,
-  "date": "2022-11-30 10:50:25",
-  "prev_buy": 19.58750252,
-  "prev_sell": 18.68679225
+  "sell": 19.78298147,
+  "buy": 18.8741826,
+  "date": "2022-11-30 11:10:24",
+  "prev_buy": 19.57368594,
+  "prev_sell": 18.67409775
 },{
   "bank_id": 30,
   "bank_name": "VISA",
-  "sell": 19.725252,
-  "buy": 18.855975,
-  "date": "2022-11-30 10:50:25",
-  "prev_buy": 19.56932075,
-  "prev_sell": 18.70592875
+  "sell": 19.76461825,
+  "buy": 18.893511,
+  "date": "2022-11-30 11:10:24",
+  "prev_buy": 19.555517,
+  "prev_sell": 18.69322125
 },{
   "bank_id": 31,
   "bank_name": "MASTERCARD",
-  "sell": 19.725252,
-  "buy": 18.84633,
-  "date": "2022-11-30 10:50:26",
-  "prev_buy": 19.56932075,
-  "prev_sell": 18.6963605
+  "sell": 19.76461825,
+  "buy": 18.8838468,
+  "date": "2022-11-30 11:10:24",
+  "prev_buy": 19.555517,
+  "prev_sell": 18.6836595
 },{
   "bank_id": 32,
   "bank_name": "BANORTE",
   "sell": 19.55,
   "buy": 18.15,
-  "date": "2022-11-30 10:50:26",
-  "prev_buy": 19.55,
-  "prev_sell": 18.15
+  "date": "2022-11-30 11:10:25",
+  "prev_buy": 19.35,
+  "prev_sell": 17.95
 },{
   "bank_id": 33,
   "bank_name": "",
