commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46051,6 +46051,10 @@
     {
       "Date": "2022-11-30 08:00",
       "Rate": "19.3679"
+    },
+    {
+      "Date": "2022-11-30 09:00",
+      "Rate": "19.3676"
     }
   ]
 }
