--- a/indexRt.html
+++ b/indexRt.html
@@ -46055,6 +46055,10 @@
     {
       "Date": "2022-11-30 09:00",
       "Rate": "19.3676"
+    },
+    {
+      "Date": "2022-11-30 10:00",
+      "Rate": "19.3637"
     }
   ]
 }
